Fix scrollbar style

--- a/src/assets/browser_firefox--userContent.css
+++ b/src/assets/browser_firefox--userContent.css
@@ -1,3 +1,3 @@
-:not(body); {
+body * {
   scrollbar-width: thin;
 }
